# Icebox

./: .gitignore  README.md  config-example.json  icewatch-example.json  pyproject.toml  setup.sh
.github/workflows/: ci.yml  dry-run.yml  icebox-semgrep.yml
.github/workflows/scripts/: dry-run.sh  end-to-end.sh  setup-vpn.sh  start-instance.sh
src/: __main__.py  icepick.py  icicle.py  snowdog.py
src/icebox/: __main__.py  icepick.py  icewatch.py  icicle.py  iptables.sh  snowdog.py
src/icebox/modules/: alerter.py  config_store.py  log_watcher.py  logger.py  smtp.py  sqlite.py  utils.py
src/modules/: log_watcher.py  logger.py  smtp.py  sqlite.py  utils.py
tests/: conftest.py  test_icebox.py
