[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "icebox"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "Icebox security monitoring and alerting system"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "paramiko>=2.7.0",
    "pytest>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["icebox"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
addopts = "-v"